# SFML

./: CMakeLists.txt  Game.cpp  Game.h
Config/: editorstate_keybinds.ini  gamestate_keybinds.ini  graphics.ini  menustate_keybinds.ini  supported_keys.ini  window.ini
Entities/: Enemy.cpp  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  Entity.cpp  Entity.h  EntityDimensionData.h  Player.cpp  Player.h
Entities/Components/: Animation.cpp  Animation.h  AnimationComponent.cpp  AnimationComponent.h  AttributeComponent.cpp  AttributeComponent.h  HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h  MovementData.h  Skill.cpp  Skill.h  SkillComponent.cpp  SkillComponent.h
Entities/Enemies/: Enemy.cpp  Enemy.h  ForestGuy.cpp  ForestGuy.h  Thief.cpp  Thief.h  Wisp.cpp  Wisp.h
Gui/: Button.cpp  Button.h  DropDownList.cpp  HealthBar.cpp  HealthBar.h  PlayerGUI.cpp  PlayerGUI.h  ProgressBar.cpp  ProgressBar.h  PushButton.cpp  Sidebar.cpp  Sidebar.h  SwitchButton.cpp  SwitchButton.h  TextureSelector.cpp  TextureSelector.h  Utils.cpp  Utils.h
Gui/Structs/: ProgressBarData.h  SidebarButton.h
Helper/Json/: Serializable.h
Helper/Json/Struct/: MapData.h
Items/: Item.cpp  Item.h
Items/Weapons/: Weapon.cpp  Weapon.h
Items/Weapons/MeleeWeapon/: MeleeWeapon.cpp  MeleeWeapon.h  Sword.cpp  Sword.h
Items/Weapons/RangeWeapon/: Bow.cpp  Bow.h  RangedWeapon.cpp  RangedWeapon.h
Map/: Tilemap.cpp  Tilemap.h
Resource Files/: Button.cpp  Button.h  DropDownList.cpp  DropDownList.h  TextureSelector.cpp  TextureSelector.h
ResourceFiles/: Button.cpp  Button.h  CssColor.h  DropDownList.cpp  PushButton.cpp  PushButton.h  SwitchButton.cpp  SwitchButton.h  TextureSelector.cpp  TextureSelector.h
Resources/map/: map.slmp
Resources/mappe standard/mappa lavica/: map.slmp
Resources/mappe standard/mappa test base/: map.slmp
Resources/sprites_da_gestire/FreeSlime/: slime.aseprite
Settings/: GraphicsSettings.cpp  GraphicsSettings.h
States/: EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  PauseMenuState.cpp  PauseMenuState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  StateData.h
Tile/: Tile.cpp  Tile.h  TileData.h
enums/: behaviour_types.cpp  directions.cpp  enemy_types.cpp  movement_states.cpp  player_animations.cpp  skill_enum.cpp  tile_types.cpp  view_types.cpp
